--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hng",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "develop": "node index.js",
+    "develop": "node src/index.js",
     "dev": "nodemon start"
   },
   "keywords": [],
