--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "node src/index.js",
-    "dev": "npm start"
+    "dev": "nodemon start",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
